test/link/section-union/assert.out
error: section-union/assert.asm(11): Force failing the build
Linking failed with 1 error
---
error: <stdin>(30):
    Assertion failed: Force failing the build
Assembly aborted with 1 error!
